stylesheet.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* --------------------------------------- */
/* --------------- GENERAL --------------- */
/* --------------------------------------- */

* {
    box-sizing: border-box;
}

:root {
    /* Theme Colors */
    --background-color: #ADD795;
    --background-color2: #529172;
    --highlights: #F0FDDD;
    --dark: #15363B;
    /* Font */
    font-family: 'Roboto', sans-serif;
    --main-font: 'Roboto', sans-serif;
    --large-font-size: 1.5rem;
    --title-font-size: 3rem;
    --med-font-size: 1rem;
}

::selection {
    /* text highlight costumization */
    background-color: var(--highlights); 
    color: var(--background-color2); 
}

::backdrop {
    background-color: var(--highlights);
    opacity: 0.75;
}
  

/* --------------------------------------- */
/* ----------------- BODY ---------------- */
/* --------------------------------------- */

body {
    width: 100vw;
    min-height: 100vh;
    background-color: var(--background-color);
    color: var(--dark);
    display: grid;
    grid-template: 1fr / 3fr 1fr; 
    grid-template-areas:
      "books info-pane"
}

/* --------------------------------------- */
/* ---------------- BOOKS ---------------- */
/* --------------------------------------- */

#books-div {
    grid-area: books;
    background-color: var(--background-color);
    padding: 50px;
    display: flex;
    flex-wrap: wrap;
    justify-content: row;
    gap: 20px;
}

/* ---- */
/* BOOK */
/* ---- */

.book-div {
    height: 200px;
    width: 300px;
    background-color: var(--background-color); 
    color: var(--dark);
    border: 3px solid var(--dark);
    padding: 10px;
    transition: background-color 0.2s ease, box-shadow 0.2s ease;
    display: grid;
    grid-template: 4fr 1fr / 4fr 2fr; 
    grid-template-areas:
    "book-info-div    book-info-div  "
    "book-buttons         toggle     "

    
}
  
.book-div:hover {
    background-color: var(--background-color); /* Change background color on hover */
    box-shadow: 4px 4px 2px var(--dark);
}

/* Book Info */

.book-info-div {
    grid-area: book-info-div;
}

.book-info > h3 {
    font-size: var(--med-font-size);
}

.book-info-div > .book-title {
    font-size: var(--large-font-size);
    margin-bottom: 8px;
}

/* Book Buttons */

.book-buttons-div {
    grid-area: book-buttons;
}

.book-button {
    cursor: pointer;
}

/* Book Toggle */

.book-read-toggle-div {
    grid-area: toggle;
    position: relative;
}

.book-read-toggle-div > label {
    position: absolute;
    right: 0;
}


/* --------------------------------------- */
/* -------------- INFO-PANE -------------- */
/* --------------------------------------- */

#info-pane-div {
    grid-area: info-pane;
    background-color: var(--background-color2);
    position: sticky;
    padding: 0 20%;
    display: grid;
    grid-template: 1fr 5fr 1fr/ 1fr; 
    grid-template-areas:
      "."
      "info"
      "add"
}

/* ---- */
/* INFO */
/* ---- */

#info-div {
    grid-area: info;
    display: flex;
    justify-content:start;
    flex-direction: column;
    align-items: left;
    
}

#title {
    align-self: center;
    margin-bottom: 20px;
    font-size: var(--title-font-size);
}
.info-line {
    margin: 10px 0;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}


/* --- */
/* ADD */
/* --- */

#add-book-div {
    grid-area: add;
    display: flex;
    align-items: center;
    justify-content: center;
}



/* --------------------------------------- */
/* -------- DEFAULT ELEMENT LOOKS -------- */
/* --------------------------------------- */

/* ------ */
/* BUTTON */
/* ------ */

button {
    display: inline-block;
    padding: 10px 20px;
    font-size: 16px;
    background-color: var(--background-color2); 
    color: var(--dark);
    border: 3px solid var(--dark); 
    text-align: center;
    text-decoration: none;
    display: inline-block;
    cursor: pointer;
    transition: background-color 0.2s ease, box-shadow 0.2s ease;
}
  
button:hover {
    background-color: var(--background-color); /* Change background color on hover */
    box-shadow: 4px 4px 2px var(--dark);
}

/* ------------- */
/* TOGGLE BUTTON */
/* ------------- */

/* From: https://www.w3schools.com/howto/howto_css_switch.asp*/
/* The switch - the box around the slider */
.switch {
    position: relative;
    display: inline-block;
    width: 60px;
    height: 34px;
  }
  
  /* Hide default HTML checkbox */
  .switch input {
    opacity: 0;
    width: 0;
    height: 0;
  }
  
  /* The slider */
  .slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
  }
  
  .slider:before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: var(--highlights);
    -webkit-transition: .4s;
    transition: .4s;
  }
  
  input:checked + .slider {
    background-color: var(--background-color2);
  }
  
  input:focus + .slider {
    box-shadow: 0 0 1px var(--background-color2);
  }
  
  input:checked + .slider:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
  }
  
  /* Rounded sliders */
  .slider.round {
    border-radius: 34px;
  }
  
  .slider.round:before {
    border-radius: 50%;
  }

